Fix alignment and remove commented code

--- a/src/components/molecules/MessageItem/MessageItem.module.scss
+++ b/src/components/molecules/MessageItem/MessageItem.module.scss
@@ -13,7 +13,7 @@
   .messageContent {
     display: flex;
     justify-content: space-between;
-    align-items: flex-end;
+    align-items: center;
     width: 100%;
 
     .textContent {
