--- a/src/components/organisms/ServerView/ServerView.module.scss
+++ b/src/components/organisms/ServerView/ServerView.module.scss
@@ -68,7 +68,7 @@
         padding: 1rem 0.5rem;
 
         .messageContainer {
-          margin: 2rem 0 1rem 0;
+          margin: 1rem 0 1rem 0;
 
           .messages {
             margin: 0.5rem 0.25rem;
@@ -121,7 +121,7 @@
         background-color: $input-bg-color;
         color: white;
         max-width: 70%;
-        align-self: flex-end; // Assuming messages are from the user. If they're from others, use flex-start
+        align-self: center; // Assuming messages are from the user. If they're from others, use flex-start
         margin: 1rem 0.5rem;
         display: flex;
         flex-direction: column;
